<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="中獎號碼:"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="輸入號碼"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/T1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/M1_1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/T2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/M1_2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/T3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/M1_3"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/T4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/M1_4"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/T5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/M1_5"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <Button
            android:id="@+id/Back_button_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="重新輸入月份" />

        <Button
            android:id="@+id/Ans_button_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="中獎結果" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>